--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^6.0.1",
     "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^7.1.0"
   },
